--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 										<h2><a href="#">Tableau Projects<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic0.PNG" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic0.png" alt="" /></a>
 									<p>Tableau Dashboards for projects Financial Forecasting and Education Services</p>
 									<ul class="actions special">
 										<!--li><a href="#" class="button">View Project</a></li-->
@@ -116,7 +116,7 @@
 										<h2><a href="#">Follicules Detection<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic7.PNG" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic7.png" alt="" /></a>
 									<p>In this project I used FasterRCNN to detect and classify ovarian follicules using images and Deep Learning</p>
 									<ul class="actions special">
 										<!--li><a href="#" class="button">Full Story</a></li-->
@@ -127,7 +127,7 @@
 										<h2><a href="#">Wheat Growth Stages Classification using satellite images<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic3.PNG" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/pic3.png" alt="" /></a>
 									<p>During my six months internship I used satellite images and deep learning to detect the growth stages of wheat agriculture and to optimise the quantity of water and fertilizers to use</p>
 									<ul class="actions special">
 										<!--li><a href="#" class="button">Full Story</a></li-->
