--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="generic.html">About me</a></li>
-							<li><a href="index.html">My Projects</a></li>
+		                                        <li class="active"><a href="index.html">My Projects</a></li>
+							<li><a href="generic.html">About me</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/oumaima-marbouh-561ba21ba/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
