--- a/generic.html
+++ b/generic.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>About me</title>
@@ -19,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">My story</a>
+						<a href="generic.html" class="logo">My story</a>
 					</header>
 
 				<!-- Nav -->
