--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">My Story</a>
+						<a href="generic.html" class="logo">My Story</a>
 					</header>
 
 				<!-- Nav -->
