--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
 	<head>
 		<title>Oumaima The DataScientist Portfolio</title>
 		<meta charset="utf-8" />
@@ -170,7 +164,8 @@
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
+									<!--li><input type="submit" value="Send Message" /></li-->
+									<a href = "mailto: abc@example.com">Send Message</a>
 								</ul>
 							</form>
 						</section>
