--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 									</div>
 								</div>
 								<ul class="actions">
-									<!--li><input type="submit" value="Send Message" /></li-->
-									<a href = "mailto: abc@example.com">Send Message</a>
+									<li><input type="submit" href = "mailto: oumaima.marbouh@polytechnique.edu" value="Send Message" /></li>
+									
 								</ul>
 							</form>
 						</section>
