--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" href = "mailto: oumaima.marbouh@polytechnique.edu" value="Send Message" /></li>
+									<li><input type="submit" value="Send Message" /></li>
 									
 								</ul>
 							</form>
