--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="mailto:oumaima.marbouh@polytechnique.edu">
+							<form method="post" action="mailto:oumaimamarbouhjobs@gmail.com">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
