--- a/generic.html
+++ b/generic.html
@@ -58,7 +58,7 @@
 <!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="mailto:oumaima.marbouh@polytechnique.edu">
+							<form method="post" action="mailto:oumaimamb777@gmail.com">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
