--- a/generic.html
+++ b/generic.html
@@ -57,7 +57,7 @@
 
 <!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!--section>
 							<form method="post" action="mailto:oumaimamb777@gmail.com">
 								<div class="fields">
 									<div class="field">
@@ -77,7 +77,7 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
-						</section>
+						</section-->
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
