--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!--section>
 							<form method="post" action="mailto:oumaimamarbouhjobs@gmail.com">
 								<div class="fields">
 									<div class="field">
@@ -168,7 +168,7 @@
 									
 								</ul>
 							</form>
-						</section>
+						</section-->
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
